# worklist-microservice

./: .dockerignore  .gitignore  Dockerfile.api  Dockerfile.frontend  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/config/: field_definitions.json  generation_rates.json  lifecycle.json
data/pools/: patients.json  radiologists.json  referring_physicians.json  study_descriptions.json
demand/: demanded_data.json
frontend/: app.py  requirements.txt
frontend/.streamlit/: config.toml  secrets.toml.example
frontend/pages/: 1_worklist.py  2_statistics.py  3_audit_log.py  4_history.py  5_demand_injection.py
frontend/utils/: api_client.py  style.py
scripts/: generate_patients.py
src/: config.py  main.py
src/api/: dependencies.py  routes_audit.py  routes_demand.py  routes_health.py  routes_history.py  routes_studies.py  routes_worklist.py
src/core/: field_registry.py  generator.py  hot_reload.py  lifecycle.py  scheduler.py
src/data/: store.py
src/models/: audit.py  demand.py  study.py
src/sample_data/: All Studies 1000 southern hills konica exa-1-20260408_0750.csv  Audit Log - 2026-04-09.xlsx  Today Unread - All Hospitals - 195-7-20260408_0753.csv  Worklist-1-20260130_0726.csv  Worklist-7-20260208_1211.csv  (+5 more)
tests/: conftest.py  test_api_audit.py  test_api_demand.py  test_api_health.py  test_api_history.py  test_api_studies.py  test_api_studies_reverse.py  test_api_worklist.py  test_audit_logger.py  test_demand_processor.py  test_field_registry.py  test_generator.py  test_lifecycle.py  test_store.py  test_store_unarchive.py
(+2 files in other folders)
