[project]
name = "microservice-worklist"
version = "0.1.0"
description = "Simulated hospital radiology worklist microservice"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "openpyxl>=3.1.5",
    "streamlit>=1.56.0",
    "streamlit-autorefresh>=1.0.1",
    "requests>=2.33.1",
    "pandas>=3.0.2",
    "plotly>=6.6.0",
]
